edition = "2023";

package xtdb.block.proto;

option java_multiple_files = true;

message TableBlock {
  bytes arrow_schema = 1;
  int64 row_count = 2;
}

message TxKey {
  int64 tx_id = 1;
  int64 system_time = 2;
}

message Block {
  TxKey latest_completed_tx = 1;
  repeated string table_names = 2;
}